--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Niek Kruse",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.4",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "express-http-proxy": "^1.1.0",
